/* This file was autogenerated from proto template version 0.0.0.1 and autogenerator version 0.0.0.1 */

syntax = "proto2";
import "nanopb.proto";

message uint16
{
	required uint32 RestartType = 1;
}

message CFE_ES_RestartCmd_t_pb
{ 
	required uint16 Payload = 1;
	repeated uint32 CmdHeader = 2[(nanopb).max_count = 8];
}