/* This file was autogenerated from proto template version 0.0.0.1 and autogenerator version 0.0.0.1 */

syntax = "proto2";

message int16
{
	required int32 ClockState = 1;
}

message CFE_TIME_StateCmd_t_pb
{

	required int16 Payload = 1;
	repeated uint32 CmdHeader = 2;
}