/* This file was autogenerated from proto template version 0.0.0.1 and autogenerator version 0.0.0.1 */

syntax = "proto2";
message CFE_TIME_TimeCmd_Payload_t_pb
{

	required uint32 Seconds = 1;
	required uint32 MicroSeconds = 2;
}